忽略编译文件

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,6 @@
 ################################################################################
 
 /FFmpegQTGUItest/.vs/FFmpegQTGUItest/v15
+/FFmpegQTGUItest/x64
+/FFmpegQTGUItest/FFmpegQTGUItest/GeneratedFiles
+/FFmpegQTGUItest/FFmpegQTGUItest/x64
